# publication-pdf-translator

./: .gitignore  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.github/workflows/: babeldoc-contract.yml  core-ci.yml
docs/: architecture.md  m0-v2-spec.md  m1-kernel-spec.md  m2-recovery-spec.md  m3-pdf-loop-spec.md  m4-artifact-gates-spec.md  m5-product-spec.md  m6-operator-adapter-spec.md  research-notes.md  terminology-evidence-format.md
examples/: config.example.json  evidence.example.json
plugins/publication-pdf-translator/: .mcp.json
plugins/publication-pdf-translator/.codex-plugin/: plugin.json
plugins/publication-pdf-translator/scripts/: adapter.py  mcp_server.py
src/pubtrans/: __init__.py  __main__.py  cli.py  errors.py  models.py  operator.py  placeholders.py  planning.py  provider.py  schema.py  state.py  validation.py
src/pubtrans/babeldoc_adapter/: __init__.py  provider.py
src/pubtrans/m0v2/: __init__.py  artifacts.py  canonical.py  errors.py  model.py  provider.py  store.py
src/pubtrans/m1/: __init__.py  context.py  errors.py  kernel.py  plan.py  services.py  store.py  (+2 more)
tests/: m0v2_helpers.py  m1_helpers.py  test_babeldoc_adapter.py  test_babeldoc_pipeline_v2.py  test_cli.py  test_contract.py  test_m0v2_contract.py  test_m0v2_store.py  test_m1_plan_workflow.py  test_m1_store_kernel.py  test_m1_terminology.py  test_m2_recovery.py  test_m3_pdf_loop.py  test_m4_artifact_model.py  test_m5_openai_and_marking.py  test_m5_planner.py  test_m5_product_e2e.py  test_m5_services.py  test_operator.py  test_plugin_adapter.py
(+29 files in other folders)
