[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "publication-pdf-translator"
version = "0.3.0"
description = "Resumable publication-grade translation runtime for BabelDOC PDFs"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Publication PDF Translator contributors" }]
dependencies = ["pymupdf>=1.25,<2"]

[project.optional-dependencies]
babeldoc = [
    "BabelDOC @ git+https://github.com/Jace-Planeswalker/BabelDOC.git@0b3b03ab1ed29c15245dca49f6cb3afece046f95",
]
dev = ["pytest>=8.3", "ruff>=0.9"]

[project.scripts]
pubtrans = "pubtrans.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 88
